# hhal

./: .gitmodules  CMakeLists.txt  Kconfig  \  arguments.cpp  arguments.h  event_utils.cpp  hhal.cpp  hhal.h  setup.sh  types.h
daemon/: CMakeLists.txt  README.md  daemon.conf.in  hhal_client.cpp  hhal_client.h  hhal_command.h  hhal_daemon.conf.in  hhal_response.h  hhal_server.cpp  hhal_server.h  lorem.txt  run_daemon.cpp  serialization.cpp  serialization.h
daemon/base/client/: socket_client.cpp  socket_client.h
daemon/base/server/: server.cpp  server.h
daemon/old_cuda/: cuda_client.cpp  cuda_client.h  cuda_commands.h  cuda_server.cpp  cuda_server.h
daemon/test/: client-continous.cpp  client-hello.cpp  client-multimessage.cpp  client-variable-length.cpp  cuda-server.cpp  kernel-launch.cpp  killer.cpp  serialization_test.cpp  server-example.cpp
daemon/utils/: config_reader.cpp  config_reader.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
dynamic_compiler/: CMakeLists.txt  LLVMInstanceManager.cpp  compiler.cpp  compiler.h  config_reader.cpp  config_reader.h  dynamic_compiler.conf.in  mango_gen_kernel_entry.cpp  mango_gen_kernel_entry.h
gn/: CMakeLists.txt  manager.cpp  manager.h  mm.cpp  mm.h  tlb.h  types.h
gn/gn/: CMakeLists.txt  config.xml  gn.cpp  gn.h  gn_return.c  hhal.h  mango_types.h
gn/gn/hnemu/: hnemu.cpp  hnemu.h  logger.cpp  logger.h
gn/gn/hnemu/hn_include/: hn.h
gn/hnemu/: hnemu.h  logger.cpp  logger.h
gn/hnemu/hn_include/: hn_errcode.h  hn_resource_manager.h
gn/hnemu/rapidxml/: rapidxml_print.hpp
hn/: CMakeLists.txt  manager.cpp  manager.h  types.h
nvidia/: CMakeLists.txt  event_registry.cpp  event_registry.h  manager.cpp  manager.h  synchronized_queue.h  types.h
test/: AnimatedGifSaver.cpp  AnimatedGifSaver.h  CMakeLists.txt  event_utils.cpp  event_utils.h  gn_dummy_rm.cpp  gn_dummy_rm.h  gn_gif_animation.cpp  gn_launch_kernel.cpp  gn_nvidia_saxpy.cpp  gn_serial_saxpy.cpp  launch_kernel.cpp  mango_arguments.h  nvidia_dummy_rm.cpp  nvidia_dummy_rm.h  nvidia_launch_kernel.cpp  nvidia_multiple_kernels.cpp  rm_common.cpp  rm_common.h  saxpy
test/cuda_kernels/: CMakeLists.txt  saxpy.cu  saxpy_1.cu  saxpy_2.cu
test/daemon_tests/: CMakeLists.txt  event_utils_hhal_client.cpp  gn_dummy_rm_hhal_client.cpp  gn_gif_animation.cpp  gn_launch_kernel.cpp  gn_nvidia_saxpy.cpp  gn_serial_saxpy.cpp  gn_serial_saxpy_bin_source.cpp  gn_serial_saxpy_bin_string.cpp  nvidia_dummy_rm_hhal_client.cpp  nvidia_launch_kernel.cpp  nvidia_launch_kernel_source.cpp  nvidia_multiple_kernels.cpp
test/gn_kernels/: CMakeLists.txt
test/gn_kernels/gif_copy_kernel/: CMakeLists.txt  copy_kernel.c
test/gn_kernels/gif_scale_kernel/: CMakeLists.txt  scale_kernel.c
test/gn_kernels/gif_smooth_kernel/: CMakeLists.txt  smooth_kernel.c
test/gn_kernels/matrix_multiplication/: CMakeLists.txt
test/gn_kernels/saxpy1/: CMakeLists.txt  saxpy1.c
test/gn_kernels/saxpy2/: CMakeLists.txt  saxpy2.c  saxpy2_source.c
test/hhal_tests/: CMakeLists.txt  event_utils_hhal.cpp  gn_dummy_rm_hhal.cpp  gn_gif_animation.cpp  gn_launch_kernel.cpp  gn_nvidia_saxpy.cpp  gn_serial_saxpy.cpp  gn_serial_saxpy_bin_source.cpp  gn_serial_saxpy_bin_string.cpp  nvidia_dummy_rm_hhal.cpp  nvidia_launch_kernel.cpp  nvidia_launch_kernel_source.cpp  nvidia_multiple_kernels.cpp
test/kernel/: CMakeLists.txt  matrix_multiplication_dev.c
test/kernel/matrix_multiplication/: matrix_multiplication_dev.c
test/kernel/saxpy2/: CMakeLists.txt
utils/: CMakeLists.txt  recover_sem.cpp
