set (DYNAMIC_COMPILER_HEADERS
	compiler.h
	mango_gen_kernel_entry.h
)

if (CONFIG_DYNAMIC_COMPILER_LLVM_ENABLE)
	set (DYNAMIC_COMPILER_HEADERS ${DYNAMIC_COMPILER_HEADERS} LLVMInstanceManager.h)
endif (CONFIG_DYNAMIC_COMPILER_LLVM_ENABLE)

install (FILES ${DYNAMIC_COMPILER_HEADERS}
	DESTINATION include/libmango/host/dynamic_compiler)

